# noughts-crosses-qt6

./: .gitignore  LICENSE  README.md  TODO.md  poetry.toml  pyproject.toml
noughts_crosses_qt6/: gui.py  main.py
